--- a/Projeto/nbproject/project.properties
+++ b/Projeto/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=Projeto_Semantico
-main.class=Sintatico.Main
+main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
